<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:tools="http://schemas.android.com/tools"
        android:layout_marginLeft="8dp"
        tools:context=".ui.MarkerDetail">

<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:context=".ui.MarkerDetail" android:orientation="vertical" android:id="@+id/id">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Id"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"/>
    <TextView
            android:id="@+id/textViewId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="5"
            android:textSize="18sp"
            android:textStyle="bold" android:text="@string/label_time"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:ems="10"
            android:id="@+id/editTextTime" android:hint="@string/hint_time"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_owncourse"
            android:textSize="18sp"
            android:textStyle="bold"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editTextOwnCourse" android:hint="@string/hint_owncourse"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_ownspeed"
            android:textSize="18sp"
            android:textStyle="bold"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editTextOwnSpeed" android:hint="@string/hint_ownspeed"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_targetbearing"
            android:textSize="18sp"
            android:textStyle="bold"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editTextTargetBearing" android:hint="@string/hint_targetbearing"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_targetaob"
            android:textSize="18sp"
            android:textStyle="bold"/>
    <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/spinnerTargetAob" android:spinnerMode="dropdown"
            android:entries="@array/aob_arrays"
            android:prompt="@string/prompt_targetaob" />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_targetrange"
            android:textSize="18sp"
            android:textStyle="bold"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editTextTargetRange" android:hint="@string/hint_targetrange"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_targetspeed"
            android:textSize="18sp"
            android:textStyle="bold"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editTextTargetSpeed" android:hint="@string/hint_targetspeed"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_targetcourse"
            android:textSize="18sp"
            android:textStyle="bold"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editTextTargetCourse" android:hint="@string/hint_targetcourse"/>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" >

        <Button
                android:id="@+id/buttonCancelar"
                android:text="@string/cancel_marker"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white" android:textStyle="bold" />

        <Button
                android:id="@+id/buttonGuardar"
                android:text="@string/save_marker"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:layout_marginLeft="40dp"
                android:textColor="@android:color/white" android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>



</ScrollView>